# PersonalSite

./: .env  .env.example  .gitignore  README.md  app.py  containers.json  dockerfile  pyproject.toml  requirements.txt
website/: __init__.py  auth.py  country.py  database.db  dog_classes.py  dog_generation.py  entities.py  get_weather.py  models.py  projects.py  views.py  wiki_search.py
website/config/: skills.py
website/css/: styles.css
website/static/: data.json  index.js  styles.css  styles.css.map  styles.scss
website/static/countries/flag_urls/: .gitignore  australia.txt  egypt.txt  el_salvador.txt  guam.txt  guatemala.txt  india.txt  israel.txt  japan.txt  mexico.txt  netherlands.txt  peru.txt  thailand.txt  united_kingdom.txt  united_states.txt
website/static/css/: components.css  main.css
website/static/js/: contact-form.js  main.js
website/static/projects/text/: cover_lettered.md  hangman.md  virtual_assistant.md  virtual_assistant.txt  yoga_sequence.md
website/templates/: answer.html.j2  country.html.j2  dog_form.html  dog_result.html  gallery.html  gallery.html.j2  gallery1.html  home.html  home.html.j2  image.html.j2  joebird.html  joebird.html.j2  layout.html  layout.html.j2  login.html  login.html.j2  macros.html.j2  name.html  old-gallery.html.j2  projects.html  projects.html.j2  questions.html.j2  register.html  register.html.j2  travel.html.j2  user.html.j2
website/templates/components/: contact_modal.html.j2
